hard-gists/4546068/run.log
=== Docker Run Log for 4546068 ===
Started at: Mi 29. Okt 14:43:20 CET 2025

[2025-10-29 14:43:21] START: Running container for 4546068
[2025-10-29 14:43:21] SUCCESS: Container 310303c8286f4d3338e05088b34c7b2f64dc0387cc4876eb5a14a6b99639ef26 started for 4546068
=== Container logs for 4546068 ===
  File "/snippet.py", line 107
    print "pycrypto: %.2fs" % benchmark(test_pycrypto)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4546068 ===
[2025-10-29 14:43:23] INFO: Container 310303c8286f4d3338e05088b34c7b2f64dc0387cc4876eb5a14a6b99639ef26 has stopped
